assets/less/base/ui/posts.less
@user-image-size: 76px;
@user-image-size-small: 32px;

@default-padding: 12px;

.post {
	// background-color: blue;

	display: inline-block;
	float: left;
	clear: both;

	padding: @default-padding;

	// this should really be dealt with once and for all in the userimage
	// directive.
	.userimg {
		float: left;
		display: inline-block;
		vertical-align: top;
		width:  @user-image-size;
		height: @user-image-size;
	}

	.meta {
		width: 100%;
		.fa {
			color: @linkColor;
		}
		.userimg ~ strong {
			padding-left: @default-padding;
			white-space: nowrap;
		}
	}

	.content {
		max-width: 40em;
		padding-left: @default-padding;
		margin-top: 0;
		margin-bottom: 0;
		margin-left: @user-image-size;
	}

	.date, .action {
		.detail-text();
	}
	.action {
		cursor: pointer;
	}

	.comments, .actions {
		padding-left: @default-padding;
		margin-left: @user-image-size;
	}

	.comments {

		@media @mobile {
			padding-left: @default-padding;
			margin-left: @user-image-size - @user-image-size-small - @default-padding;
		}

		ul {
			margin: 0;
			padding: 0;
			// this would be a sane global default.
			list-style-type: none;
			li {
				padding-top: @default-padding;
				&:last-of-type {
					padding-bottom: @default-padding;
				}
			}
		}

		.userimg {
			width:  @user-image-size-small;
			height: @user-image-size-small;
		}

		.content, .meta {
			margin-left: @user-image-size-small;
		}

		textarea { width: 100% }
		button {
			margin-top: 6px;
			float: right;
		}
	}
}

